Fix TOC misaligned when max width option is disable
Since the TOC container is overlaid on top of the content container when the TOC
is not pinned, we always want the width of those two containers to match or else
misalignment could occur. This commit keeps the
`.mw-table-of-contents-container` selector in sync with the
`.mw-content-container` selector in terms of width.

Bug: T322162

--- a/resources/skins.vector.styles/layouts/grid.less
+++ b/resources/skins.vector.styles/layouts/grid.less
@@ -17,7 +17,8 @@
 	}
 }
 
-.mw-content-container {
+.mw-content-container,
+.mw-table-of-contents-container {
 	max-width: @max-width-content-container;
 
 	// For container logic specific to special pages and history pages.
